refactor: application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-# H2 Connection
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+spring.datasource.username=${DB_ORACLE}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-# H2 Client
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=7
+
+api.secutiry.token.secret=${JWT_SECRET:12345678}
