--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.flyway.baseline-version=7
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+
+server.error.include-stacktrace=never
 
 api.secutiry.token.secret=${JWT_SECRET:12345678}
